# PandaExamples

ClawnDash/: .clangd
ClawnDash/.Panda/: assets.json  project.json
ClawnDash/.zed/: tasks.json
ClawnDash/Assets/: menu.pnd  menu.world  world.pnd
ClawnDash/Export/: CMakeLists.txt
ClawnDash/Scripts/ClawnDash/: CMakeLists.txt  CMakeUserPresets.json  ClawnDash.def
ClawnDash/Scripts/ClawnDash/scripts/: build_scripts.sh  configure_scripts.sh  format_code.sh  open_export_visual_studio.sh
ClawnDash/Scripts/ClawnDash/src/: ClawnDashDemo.cpp  ClawnDashDemo.hpp  ClawnDashLevelController.cpp  ClawnDashLevelController.hpp  ClawnDashMenu.cpp  ClawnDashMenu.hpp
ClawnDash/Scripts/ClawnDash/src/Model/: DashTypes.hpp
ClawnDash/Scripts/ClawnDash/src/UI/: DashHudView.cpp  DashHudView.hpp  DashUIStyle.cpp  DashUIStyle.hpp  GameplayHudView.cpp  GameplayHudView.hpp  LevelSelectView.cpp  LevelSelectView.hpp  MainMenuView.cpp  MainMenuView.hpp  ResultOverlayView.cpp  ResultOverlayView.hpp
Game2048/: .clangd  .gitignore
Game2048/.Panda/: project.json
Game2048/.zed/: tasks.json
Game2048/Assets/: world.world
Game2048/Export/: CMakeLists.txt
HelloUI/: .clangd
HelloUI/.Panda/: project.json
HelloUI/.zed/: tasks.json
HelloUI/Assets/: world.pnd  world.world
HelloUI/Export/: CMakeLists.txt  CMakePresets.json
HelloUI/Scripts/HelloUI/: CMakeLists.txt  CMakeUserPresets.json  HelloUI.def
HelloUI/Scripts/HelloUI/scripts/: build_scripts.sh  configure_scripts.sh  format_code.sh
HelloUI/Scripts/HelloUI/src/: HelloUIDemo.cpp  HelloUIDemo.hpp
HelloUI/Scripts/HelloUI/src/UI/: DemoCardView.cpp  DemoCardView.hpp  HelloUIStyle.cpp  HelloUIStyle.hpp  MainHeaderView.cpp  MainHeaderView.hpp  MainToolbarView.cpp  MainToolbarView.hpp  MainWindowView.cpp  MainWindowView.hpp  ScrollStressSectionView.cpp  ScrollStressSectionView.hpp  SecondaryCardsRowView.cpp  SecondaryCardsRowView.hpp  SecondaryWindowView.cpp  SecondaryWindowView.hpp
Neverland/: .clangd  .gitignore  plan.md
Neverland/.Panda/: assets.json  project.json
Neverland/.zed/: tasks.json
Neverland/Assets/: world.world
Neverland/Export/: CMakeLists.txt
Neverland/Export/native/IOS/: Info.plist
Neverland/Export/native/OSX/: Info.plist
Neverland/Scripts/Neverland/: .clang-format  CMakeLists.txt  CMakeUserPresets.json  Neverland.def
Neverland/Scripts/Neverland/scripts/: build_scripts.sh  configure_scripts.sh  format_code.sh  open_export_xcode.sh
Neverland/Scripts/Neverland/src/: BaseScript.cpp  BaseScript.hpp  BlocksCreation.cpp  BlocksCreation.hpp  CameraMove.cpp  CameraMove.hpp  GameMenu.cpp  GameMenu.hpp  HeldItemView.cpp  HeldItemView.hpp  NeverlandHUD.cpp  NeverlandHUD.hpp  NeverlandHUDLayout.hpp  NeverlandTouchControls.cpp  NeverlandTouchControls.hpp  PlayerController.cpp  PlayerController.hpp  SunCycle.cpp  SunCycle.hpp  TerrainBrushPanel.cpp  TerrainBrushPanel.hpp
Neverland/Scripts/Neverland/src/Model/: BlockPalette.hpp  BuildingCellGrid.cpp  BuildingCellGrid.hpp  BuildingGrid.cpp  BuildingGrid.hpp  Chunk.cpp  Chunk.hpp  ChunkMeshSnapshot.hpp  ChunksStorage.cpp  ChunksStorage.hpp  ExtrudedProfile.cpp  ExtrudedProfile.hpp  GameBrush.cpp  GameBrush.hpp  GameContext.cpp  GameContext.hpp  LightGrid.cpp  LightGrid.hpp  LightmapTexture.cpp  LightmapTexture.hpp  MarchingCubesTables.hpp  PerlinNoise.cpp  PerlinNoise.hpp  RegionMesh.cpp  RegionMesh.hpp  RegionMeshGenerator.cpp  RegionMeshGenerator.hpp  TerrainAccess.cpp  TerrainAccess.hpp  TerrainBrush.cpp  TerrainBrush.hpp  TerrainMeshGenerator.cpp  TerrainMeshGenerator.hpp  Voxel.hpp  VoxelMeshGenerator.cpp  VoxelMeshGenerator.hpp  VoxelRaycastData.hpp  VoxelTextureMapper.hpp  WorldSave.cpp  WorldSave.hpp
Neverland/Scripts/Neverland/src/Physics/: VoxelCharacterController.cpp  VoxelCharacterController.hpp
Neverland/Scripts/Neverland/src/UI/: ArchLibraryMenu.cpp  ArchLibraryMenu.hpp  ArchUICommon.cpp  ArchUICommon.hpp  ArchesPanel.cpp  ArchesPanel.hpp  BalconiesPanel.cpp  BalconiesPanel.hpp  ColumnsPanel.cpp  ColumnsPanel.hpp  CornicesPanel.cpp  CornicesPanel.hpp  DecorPanel.cpp  DecorPanel.hpp  DomesPanel.cpp  DomesPanel.hpp  DoorsPanel.cpp  DoorsPanel.hpp  FacadesPanel.cpp  FacadesPanel.hpp  FoundationsPanel.cpp  FoundationsPanel.hpp  MaterialsPanel.cpp  MaterialsPanel.hpp  PilastersPanel.cpp  PilastersPanel.hpp  RoofsPanel.cpp  RoofsPanel.hpp  StairsPanel.cpp  StairsPanel.hpp  TerrainPanel.cpp  TerrainPanel.hpp  WallsPanel.cpp  WallsPanel.hpp  WindowsPanel.cpp  WindowsPanel.hpp
Neverland/docs/: design.md  technical_plan.md
PhysicsTest/: .clangd
PhysicsTest/.Panda/: assets.json  project.json
PhysicsTest/.zed/: tasks.json
PhysicsTest/Assets/: Joints2D.world  Joints3D.world  world.world
PhysicsTest/Export/: CMakeLists.txt
PhysicsTest/Scripts/PhysicsTest/: .gitignore  CMakeLists.txt  PhysicsTest.def  format.sh
PhysicsTest/Scripts/PhysicsTest/scripts/: build_scripts.sh  configure_scripts.sh  format_code.sh  open_export_visual_studio.sh
PhysicsTest/Scripts/PhysicsTest/src/: PlayerController.cpp  PlayerController.hpp
Platformer/: .gitignore
Platformer/.Panda/: assets.json  project.json
Platformer/.zed/: tasks.json
Platformer/Assets/: world.pnd  world.world  world2.world
Platformer/Export/: CMakeLists.txt
Platformer/Export/App/: StartApp.cpp
Platformer/Export/EntryPoint/Desktop/: main.cpp
Platformer/Export/native/IOS/: Info.plist
Platformer/Export/native/OSX/: Info.plist
Sponza/.Panda/: assets.json  project.json
Sponza/.zed/: tasks.json
Sponza/Assets/: LightRect.mat  world.pnd  world.world
Sponza/Export/: CMakeLists.txt
Sponza/Scripts/Sponza/: CMakeLists.txt  CMakeUserPresets.json  Sponza.def
Sponza/Scripts/Sponza/scripts/: build_export.sh  build_scripts.sh  configure_scripts.sh  format_code.sh
Sponza/Scripts/Sponza/src/: SampleScript.cpp  SampleScript.hpp
TerrainTest/: .clangd
TerrainTest/Scripts/TerrainTest/: CMakeLists.txt  TerrainTest.def
TerrainTest/Scripts/TerrainTest/scripts/: build_export.sh  build_scripts.sh  configure_export.sh  configure_scripts.sh  format_code.sh  open_export_xcode.sh
(+130 files in other folders)
